_sass/_layout.scss
.smart-container {
  @include container-fixed;
  @media (min-width: $screen-md-min) {
    width: $container-md;
  }
  @media (min-width: $screen-lg-min) {
    width: $container-lg;
  }
}

pre code {
  font-size: 14px;
}

.main-content table {
  @extend .table;
  @extend .table-striped;
}
/**
 * Clearfix
 */
%clearfix {
  &:after {
    content: '';
    display: table;
    clear: both;
  }
}

/**
 * Icons
 */
.icon {
  > svg {
    display: inline-block;
    width: 16px;
    height: 16px;
    vertical-align: middle;

    path {
      fill: $gray;
    }
  }
}

/**
 * Site header
 */

.navbar-links {
  padding: 1%;
  @media (min-width: $screen-md-min) {
    text-align: right;
  }
  > a {
    display: inline-block;
    margin-right: 4%;
    font-size: 1.7rem;
  }
}

.blog-links {
  padding: 1%;
}

.post-title {
  font-size: 38px;
}

.rss-container {
  padding: 1%;
}

/**
 * Page content
 */
.page-content {
  // padding: $spacing-unit 0;
}

.page-heading {
  font-size: 34px;
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }
}

.post-meta {
  color: $grey-color;
}

.post-link {
  display: block;
  font-size: 24px;
}

/**
 * Posts
 */
.post-header {
  margin: $spacing-unit 0;
}

//for subheadings within posts
h3 {
  font-weight: 500;
  font-size: 22px;
}

.search-bar-container *,
.search-bar-container *:before,
.search-bar-container *:after {
  -webkit-box-sizing: content-box !important;
  -moz-box-sizing: content-box !important;
  box-sizing: content-box !important;
}

nav.header {
  border-bottom: 1px solid darken($gray-light, 8%);
  &:nth-of-type(2) {
    margin-bottom: 20px;
  }
}

nav.top-nav {
  padding: 2% 0 1% 0%;

  .logo-container img {
    width: 200px;
    margin-top: -4px;
  }
}

h1,
h2 {
  font-weight: 300;
}

.main-content {
  padding: 0 4%;
}

.s-starry-background-wrapper {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.2),
      rgba(0, 0, 0, 0.5)
    ),
    url('/about/img/background.jpg');
  margin: 0 0px;
  background-attachment: fixed;
}

.s-scix-background-wrapper {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.2),
      rgba(0, 0, 0, 0.5)
    ),
    url('/help/common/images/scix/bg-earth.jpg');
  margin: 0 0px;
  background-attachment: fixed;
}

.s-logo-header {
  width: 100%;
  font-size: 18px;
  @media only screen and (min-width: $screen-xs-min) {
    font-size: 22px;
  }
  @media only screen and (min-width: $screen-sm-min) {
    font-size: 40px;
  }
  color: white;
  -webkit-font-smoothing: antialiased;
  font-weight: 300;

  img {
    max-width: 75px;
    position: relative;
    top: -5px;
    max-height: 66px;
  }

  display: flex;
  justify-content: center;

  background-attachment: fixed;
  padding: 20px 0 20px 0;
  margin-bottom: 10px;
  text-align: center;

  a,
  a:hover,
  a:visited {
    color: #fff;
    text-decoration: none;
  }
}

.navbar {
  margin-bottom: 0 !important;
  line-height: 62px;
  height: 62px;
  background-color: #1a1a1a;
  border-radius: 0px;
}

.navbar-brand {
  display: inline;
  color: #fff !important;
  position: relative;
  top: 0px;
  left: 5px;
  font-size: 25px;
  -webkit-font-smoothing: antialiased;
  font-weight: 300;
  letter-spacing: 0.1rem;

  img {
    display: inline-block;
  }

  &:hover,
  &:visited {
    color: #fff;
    text-decoration: none;
  }
}

.s-ads-icon {
  height: 45px;
  position: relative;
  top: -4px;
  left: 6px;
}

.navbar-nav .dropdown-toggle,
.navbar-nav .dropdown {
  height: 60px;
}

// Default navbar - About dropdown pinned to the right
.navbar-right {
  position: absolute !important;
  right: 0 !important;
  top: 0 !important;
  float: none !important;
  margin-right: 0 !important;
}

.navbar-right .dropdown-menu {
  right: 0;
  left: auto;
}

.navbar {
  position: relative !important;
}

// Home navbar - different layout with search bar
.home-navbar .navbar-right {
  position: static !important;
  float: right !important;
  margin-right: 0 !important;
}

.home-navbar .navbar {
  position: static !important;
}

.navbar-nav .btn-link {
  color: #c4c4c4;
  &:hover,
  &:focus {
    text-decoration: none !important;
    color: #fff;
  }
}

.navbar-nav .dropdown-toggle {
  &:focus {
    border-color: white;
    border-radius: 5px;
  }
}

.btn-link:focus {
  outline: none;
  cursor: pointer;
}

.nav > .dropdown > .btn-link {
  font-size: 17px;
  font-weight: 300;
}

.dropdown-menu {
  li.no-hover-style {
    &:hover {
      background-color: $body-bg;
    }
  }

  li:not(.divider):not(.no-hover-style) {
    border-left: 3px solid $body-bg;
    font-size: 15px;
    &:hover {
      background-color: darken(#5d5d5d, 2%);
      cursor: pointer;
      border-left: 3px solid $gray-light;
    }
    & > a,
    .btn-link {
      padding: 12px;
      display: block;
    }
    a {
      color: $text-color;
    }
    a:hover {
      text-decoration: none;
    }
    .btn-link {
      color: $text-color;
    }
    .btn-link:hover {
      text-decoration: none;
    }
  }
  label {
    font-weight: 300;
  }
}

.dropdown-toggle {
  &:hover,
  &:focus {
    text-decoration: none;
  }
}

.about-page-icon {
  font-size: 22px !important;
}

.__footer_wrapper {
  background-color: #000;
  color: white;
  font-size: 1em;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 300;
  padding: 30px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  @media (min-width: $screen-sm-min) {
    flex-direction: row;
  }

  p {
    font-size: 1em;
  }

  & > * {
    padding: 0 30px;
  }
  .__footer_brand {
    line-height: 1.1.5;
  }
  .__footer_brand_extra {
    color: rgba(255, 255, 255, 0.5);
    max-width: 300px;
    @media (min-width: $screen-sm-min) {
      width: 100%;
    }
    line-height: 1.5;
  }

  .__footer_brand_logos {
    #nasa-logo {
      width: 80px;
    }
    #smithsonian-logo {
      width: 66px;
    }
    #cfa-logo {
      width: 100px;
      padding-left: 5px;
      padding-right: 5px;
    }
  }
}

.__footer_links {
  list-style: none;
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;

  a {
    text-decoration: none;
    color: rgba(255, 255, 255, 0.8);
    font-weight: 100;
    &:hover {
      color: #5683e0;
    }
  }

  li {
    line-height: 1.25;
    margin-bottom: 8px;
  }
}

.__footer_list_title {
  font-weight: 400;
  margin-bottom: 1em;
}

.footer-disclaimer {
  margin-top: 1em;
  font-style: italic;
  font-size: x-small;
  max-width: 300px;
}

.s-footer {
  width: 100%;
}

.scalable {
  overflow: hidden;
}

.scalable iframe {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.scalable .scalable-content {
  height: 0;
  position: relative;
}

.scalable-16-9 .scalable-content {
  /* Percentage from 9 divided by 16 for ratio of 16:9. */
  padding-bottom: 56.25%;
}

html,
body {
  height: 100%;
}

summary {
  color: #2169da;
}

details {
  border: 1px solid darkgrey;
  padding: 1rem;
  border-radius: 10px;
}

// Highlight boxes
.highlight-box {
  background-color: #F2F2F2;
  border-left: 4px solid;
  padding: 3rem;
  margin: 1rem 0;
  font-style: italic;
  border-radius: 0;
  font-size: 1.25em;
}

.highlight-box-teal {
  border-left-color: #5FBFAE;
}

.highlight-box-yellow {
  border-left-color: #BFAC4B;
}

